[package]
name = "josh-search"
version = "26.7.19"
repository = "https://github.com/josh-project/josh"
authors = ["Josh Project authors <contact@josh-project.dev>"]
license-file = "../LICENSE"
description = "Trigram based code search index for git repositories"
keywords = ["git", "search", "index", "trigram"]
readme = "../README.md"
edition = "2024"

[[bench]]
name = "trigram"
harness = false

[dependencies]
anyhow.workspace = true
bitvec = "1.0.1"
git2.workspace = true
hex.workspace = true

[dev-dependencies]
criterion2 = { version = "3.0.3" }
rand = "0.10.1"
tracing.workspace = true
josh-core.workspace = true
josh-test-support = { path = "../devtools/josh-test-support" }
