[package]
name = "josh-starlark"
version = "22.4.15"
edition = "2024"
authors = ["Christian Schilling <initcrash@gmail.com>"]
license-file = "../LICENSE"
description = "Starlark support for creating josh filters"
keywords = ["git", "monorepo", "workflow", "scm", "starlark"]
readme = "../README.md"
repository = "https://github.com/josh-project/josh"

[dependencies]
josh-filter = { path = "../josh-filter" }
starlark = "0.13.0"
starlark_derive = "0.13.0"
anyhow = { workspace = true }
allocative = "0.3"
git2 = { workspace = true }
