[package]
name = "josh-templates"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { workspace = true }
josh-core = { path = "../josh-core" }
josh-graphql = { path = "../josh-graphql" }
juniper = { workspace = true }
serde_json = { workspace = true }
handlebars = "6.4.0"
form_urlencoded = "1.2.2"

[features]
incubating = []
