[package]
name = "josh-templates"
version = "26.5.8"
edition = "2024"
authors = ["Josh Project authors <contact@josh-project.dev>"]
description = "Josh templating support"
license-file = "../LICENSE"
repository = "https://github.com/josh-project/josh"
keywords = ["git", "monorepo", "workflow", "scm"]

[dependencies]
handlebars = "6.4.0"
form_urlencoded.workspace = true

anyhow.workspace = true
git2.workspace = true
juniper.workspace = true
serde_json.workspace = true

josh-core.workspace = true
josh-graphql.workspace = true

[features]
