
[package]
name = "josh-test-server"
version = "0.3.0"
repository = "https://github.com/esrlabs/josh"
authors = ["Christian Schilling <christian.schilling@esrlabs.com>"]
license-file = "LICENSE"
description = "GIT server for testing purposes"
keywords = ["git", "http", "scm"]
edition = "2018"


[dependencies]
clap = "2"
futures = "*"
tokio = {version = "0.3", features = ["full"] }
tokio-process = "*"
tokio-io = "*"
tokio-util = { version = "0.3.1", features=["compat"] }
hyper = "0.13"
hyper_cgi = "0.2"
mime = "*"
base64 = "*"
