
[package]
name = "josh-test-server2"
version = "0.3.0"
repository = "https://github.com/esrlabs/josh"
authors = ["Christian Schilling <christian.schilling@esrlabs.com>"]
license-file = "LICENSE"
description = "GIT server for testing purposes"
keywords = ["git", "http", "scm"]
edition = "2018"


[dependencies]
clap = "2"
futures = "0.1"
tokio = {version = "0.2", features = ["full"] }
tokio-process = "0.2"
tokio-io = "0.1"
hyper = "0.13"

