[package]
name = "josh-cq-tests"
version = "26.5.8"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
serde_json.workspace = true
git2.workspace = true
tempfile.workspace = true
url.workspace = true
tokio-util = { workspace = true, features = ["io"] }

tracing-subscriber = { workspace = true, features = ["env-filter"] }

josh-cq.workspace = true
josh-test-github.workspace = true
josh-core.workspace = true
josh-github-graphql.workspace = true
josh-github-webhooks.workspace = true
